# selenium

./: .gitignore  README.md  break_continue  flake.nix  inc_dec  input  pyproject.toml  switch  ternary
examples/: bitwise.sel  bool.sel  break_continue.sel  char.sel  factorial.sel  float.sel  for.sel  hello.sel  hello_world.sel  inc_dec.sel  input.sel  switch.sel  ternary.sel
selenium/: __init__.py  ast.py  codegen_c.py  lexer.py  main.py  parser.py  runtime.c  sema.py
