[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium-compiler"
version = "0.1.0"
description = "An esoteric strongly typed language that compiles Selenium to C."
requires-python = ">=3.10"
authors = [{name = "ewanc26"}]

[project.scripts]
seleniumc = "selenium.main:main"
